Fixed z-index make link not clickable

--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,8 @@ html {
   min-width: 100vh;
 
   background-color: black;
+
+  position: relative;
 }
 
 .loading {
