--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -33,13 +33,6 @@
 }
 
 .sidebar {
-  position: absolute;
-
-  bottom: 0;
-  right: 0;
-
-  z-index: 1;
-
   padding: 1rem 1rem 0 1rem;
 }
 
